[project]
name = "game-gen-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "diffusers>=0.37.1",
    "huggingface-hub>=1.14.0",
    "ollama>=0.6.2",
    "pillow>=12.2.0",
    "safetensors>=0.7.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.8.0",
]
